--- a/main.lfm
+++ b/main.lfm
@@ -7,6 +7,7 @@ object FrmMain: TFrmMain
   ClientHeight = 469
   ClientWidth = 762
   OnShow = FormShow
+  Position = poScreenCenter
   LCLVersion = '2.0.12.0'
   object Label1: TLabel
     Left = 16
